--- a/readme.html
+++ b/readme.html
@@ -353,7 +353,7 @@ For more information have a look at
             <a href="#top">Back to top</a> - <a href="all.html">Everything on a single page</a>
             - <a href="?print=1">Print current page</a> - <a href="all.html?print=1">Print all pages</a>
             
-                <a href="https://github.com/https://github.com/flosse/scaleApp" id="fork-me-on-github">Fork me on Github</a>
+                <a href="https://github.com/flosse/scaleApp" id="fork-me-on-github">Fork me on Github</a>
             
         </footer>
     </div>
