rerender due to headline rendering problem

--- a/all.html
+++ b/all.html
@@ -340,7 +340,12 @@ localized string.
     delete @m
     @sb.unsubscribe @</code></pre>
 <pre><code class="lang-coffeescript">scaleApp.publish &quot;changeName&quot;, &quot;Peter&quot;</code></pre>
-<a name="state-a-hrefhttps-enwikipediaorg-wiki-finite-state-machinefinite-state-machine-a"></a><h2>state - <a href="https://en.wikipedia.org/wiki/Finite_state_machine">Finite State Machine</a></h2>
+<a name="state-finite-state-machine"></a><h2>state - Finite State Machine</h2>
+<p>The state plugin is an approach to implement a
+<a href="https://en.wikipedia.org/wiki/Finite_state_machine">Finite State Machine</a>
+that can be used to keep track of your applications state.
+
+</p>
 <p><img src="https://raw.github.com/flosse/scaleApp/master/fsm.png" alt="scaleApp fsm">
 
 </p>
